DP-1578 install microservice on top level. Now mvn compile on the parent directory will generate wars for all microservices